--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DEVCOIN LP Calculator</title>
+  <title>DEVCOIN LP & veBAL Calculator</title>
   <style>
     body {
       background: #0e0e0e;
@@ -29,31 +29,39 @@
   </style>
 </head>
 <body>
-  <h1>DEVCOIN 80/20 LP Calculator</h1>
+  <h1>DEVCOIN 80/20 LP & veBAL Calculator</h1>
   <label>Jumlah DEVCOIN:</label>
   <input type="number" id="devcoin" placeholder="Contoh: 100" />
   <label>Harga 1 DEVCOIN (dalam USDT):</label>
   <input type="number" id="price" placeholder="Contoh: 0.20" step="0.01" />
-  <button onclick="calculateLP()">Kira LP</button>
+  <label>Tempoh Lock (hari):</label>
+  <input type="number" id="lockdays" placeholder="Contoh: 365" />
+  <button onclick="calculateLP()">Kira LP & veBAL</button>
   <div id="result"></div>
 
   <script>
     function calculateLP() {
       const devcoinAmount = parseFloat(document.getElementById("devcoin").value);
       const pricePerDevcoin = parseFloat(document.getElementById("price").value);
+      const lockDays = parseFloat(document.getElementById("lockdays").value);
+      const maxDuration = 365; // hari
 
-      if (isNaN(devcoinAmount) || isNaN(pricePerDevcoin)) {
-        document.getElementById("result").innerText = "Sila masukkan nilai yang sah.";
+      if (isNaN(devcoinAmount) || isNaN(pricePerDevcoin) || isNaN(lockDays)) {
+        document.getElementById("result").innerText = "Sila masukkan semua nilai dengan betul.";
         return;
       }
 
       const totalValue = devcoinAmount * pricePerDevcoin;
       const usdtRequired = (totalValue / 0.8) * 0.2;
+      const totalLP = totalValue + usdtRequired;
+
+      const veBAL = (totalLP * (lockDays / maxDuration)).toFixed(2);
 
       document.getElementById("result").innerHTML = `
-        <p><strong>Total Value (80%):</strong> $${totalValue.toFixed(2)} USDT</p>
+        <p><strong>Total Value (80% DEVCOIN):</strong> $${totalValue.toFixed(2)} USDT</p>
         <p><strong>USDT Diperlukan (20%):</strong> $${usdtRequired.toFixed(2)} USDT</p>
-        <p><strong>Total LP Value:</strong> $${(totalValue + usdtRequired).toFixed(2)} USDT</p>
+        <p><strong>Total LP Value:</strong> $${totalLP.toFixed(2)} USDT</p>
+        <p><strong>veBAL (anggaran):</strong> ${veBAL}</p>
       `;
     }
   </script>
